--- a/style.css
+++ b/style.css
@@ -146,6 +146,12 @@ section {
 
 }
 
+h4{
+    color: #FFD700;
+    font-size: 10px;
+    margin-top: 14%;
+}
+
 .arrow-img {
 
     margin: 12px 0;
@@ -212,6 +218,11 @@ section {
         height: 72px;
         font-size: 20px;
         margin-top: 15px;
+    }
+
+    h4{
+       
+        margin-top: 80%;
     }
 
 
